# chroma-tokenizer

./: README.md  SERVER_README.md  TEST_README.md  content.css  content.js  manifest.json  output.html  popup.html  popup.js  pyproject.toml  run_test.sh  simple_bpe.js  simple_test.py  start_server.sh  test.html  test_extension.html  test_jina_tokenization.py  test_tokenizer.py  tokenizer_server.py
