[project]
name = "tokenizer-test"
version = "0.1.0"
description = "Test tokenization logic for Chrome extension"
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.21.0",
    "torch>=1.12.0",
    "tokenizers>=0.13.0",
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "peft>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
